# BSUIR-POIT-4-YEAR-7-SEMESTER-LABS

./: .gitignore  shell.nix
AKG/: README.md
AKG/lab1/: Cargo.toml
Coursework/: Note.docx  Task.docx  music_db.mwb
DB/: lab2.sql  lab3.sql  lab4.sql  lab5.sql  lab6.sql  lab7.sql  lab8.sh  lab8.sql
DB/1/: exploration.sql  library.sql
DB/db/: MYSQL_CREATE_EXPLORATION.sql  MYSQL_CREATE_LIBRARY.sql  MYSQL_FILL_EXPLORATION.sql  MYSQL_FILL_LIBRARY.sql
Marketing/: README.md  handbook.docx  Доклад.docx  Презентация.pptx
POZP/Lab1/: AND4_Impl.bld  AND4_Impl.cmd_log  AND4_Impl.ncd  AND4_Impl.ngc  AND4_Impl.ngd  AND4_Impl.ngr  AND4_Impl.par  AND4_Impl.pcf  AND4_Impl.prj  AND4_Impl.syr  AND4_Impl.twr  AND4_Impl.twx  AND4_Impl.unroutes  AND4_Impl.vhd  AND4_Impl.xst  AND4_Impl_envsettings.html  AND4_Impl_map.map  AND4_Impl_map.mrp  AND4_Impl_map.ncd  AND4_Impl_map.ngm  AND4_Impl_pad.csv  AND4_Impl_pad.txt  AND4_Impl_stx_beh.prj  AND4_Impl_summary.html  AND4_Impl_xst.xrpt  AND_4_Test.wcfg  BUTTON_LED.vhd  BUTTON_LED_guide.ncd  BUTTON_LED_summary.html  Equation_Impl.cmd_log  Equation_Impl.ngc  Equation_Impl.ngd  Equation_Impl.ngr  Equation_Impl.pad  Equation_Impl.par  Equation_Impl.pcf  (+41 more)
Saimmod/: README.md  ПОСОБИЕ к Лабораторным работам   2021.docx
ZOS/: Лабораторный_практикум_ЦОС.DOC
ZOS/lab5/: Cargo.toml
ZOS/lab5-2/: Cargo.toml
ZOS/lab5-2/src/: main.rs
ZOS/lab5/src/signals/: fourier.rs  mod.rs  polyharmonic.rs  sawtooth.rs  triangular.rs  utils.rs  wav.rs  widget.rs
ZOS/lab5/src/widgets/input/: mod.rs
ZOS/lab5/src/widgets/window/: imp.rs  mainwindow.ui
(+556 files in other folders)
