[package]
name = "lab3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["image"]}
# iced = { version = "0.3" }
num-complex = "0.4.0"
image="0.23.14"
lazy_static = "1.4.0"
tempdir="0.3.7"
