[package]
name = "lab3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters="0.3.1"
gtk = { version = "0.2", package = "gtk4" }
once_cell="1.8.0"
tempdir="0.3.7"
hound="3.4.0"
num="0.4.0"
float-cmp="0.9.0"
rustfft="6.0.1"
